src/test/run-pass/regions-addr-of-ret.rs
fn f(x : &a/int) -> &a/int {
    return &*x;
}

fn main() {
    let three = &3;
    log(error, fmt!{"%d", *f(three)});
}

