src/test/compile-fail/ret-by-reference-specify-param.rs
// error-pattern:must specify referenced parameter

fn f(a: int, b: int) -> &int {
    ret a;
}

fn main() {}
